--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<strong><font size="20">Welcome to 欢迎来到<font color ="55EEFF">凌空工作室</font></font></strong>
+<strong><font size="15">Welcome to 欢迎来到<font size="20" color ="55EEFF">凌空工作室</font></font></strong>
+<div style="background-color:DDFFFF"><font size="14">关于我们</font><br><a href="info.html">信息</a></div>
