--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
-<strong><font size="15">Welcome to 欢迎来到<font size="20" color ="55EEFF">凌空工作室</font></font></strong>
-<div style="background-color:DDFFFF"><font size="14">关于我们</font><br><a href="info.html">信息</a></div>
+<head>
+  <title>天空即为极限，我们超越天空！——凌空工作室</title>
+  <style type="text/css">
+    a{
+      text-decoration:none;
+    }
+  </style>
+</head>
+<body>
+  <strong>Welcome to 欢迎来到<font size="20" color ="55EEFF">凌空工作室</font></strong>
+  <div style="background-color:DDFFFF"><font size="14">关于我们</font><br><a href="info.html">信息</a></div>
+</body>
