--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
   <strong>Welcome to 欢迎来到<font size="20" color ="55EEFF">凌空工作室</font></strong>
-  <div style="background-color:DDFFFF"><font size="14">关于我们</font><br><a href="info.html">信息</a></div>
+  <div style="background-color:DDFFFF"><font size="15">关于我们</font></div>
+  <div style="background-color:DDDDFF">
+    <a href="info.html"><font size="14" color="333333">信息</font></a>
+    <a href="info.html"><font size="14" color="333333">作品</font></a>
+  </div>
 </body>
