--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
   <strong>Welcome to 欢迎来到<font size="20" color ="55EEFF">凌空工作室</font></strong>
   <div style="background-color:DDFFFF"><font size="15">关于我们</font></div>
   <div style="background-color:DDDDFF">
-    <a href="info.html"><font size="14" color="333333">信息</font></a>
-    <a href="info.html"><font size="14" color="333333">作品</font></a>
+    <a href="info.html"><font size="7" color="333333">信息</font></a>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="info.html"><font size="7" color="333333">作品</font></a>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="info.html"><font size="7" color="333333">新闻</font></a>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="info.html"><font size="7" color="333333">预告</font></a>
   </div>
 </body>
