--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <div style="background-color:DDDDFF">
     <a href="info.html"><font size="7" color="333333">信息</font></a>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="info.html"><font size="7" color="333333">作品</font></a>
+    <a href="opus.html"><font size="7" color="333333">作品</font></a>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="info.html"><font size="7" color="333333">新闻</font></a>
+    <a href="news.html"><font size="7" color="333333">新闻</font></a>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="info.html"><font size="7" color="333333">预告</font></a>
+    <a href="prev.html"><font size="7" color="333333">预告</font></a>
   </div>
 </body>
