--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     a{
       text-decoration:none;
     }
+    #tips {
+    position:absolute;
+    bottom:0px;
+    width:100%;
+    height:auto;
+    text-align:center;
+    background:#ccc;
+    z-index:2;
+    overflow:hidden;
+    }
   </style>
 </head>
 <body>
@@ -17,5 +27,8 @@
     <a href="news.html"><font size="7" color="333333">新闻</font></a>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <a href="prev.html"><font size="7" color="333333">预告</font></a>
+  </div>
+  <div id="tips">
+    建站者：友谊の力量 一切本站内容归属凌空工作室管理
   </div>
 </body>
