--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     bottom:0px;
     width:100%;
     height:auto;
-    text-align:center;
+    text-align:right;
     background:#ccc;
     z-index:2;
     overflow:hidden;
@@ -30,5 +30,11 @@
   </div>
   <div id="tips">
     建站者：友谊の力量 一切本站内容归属凌空工作室管理
+    <br>
+    工作室总部创立日期：2018.12.**，正式成立于2019.03.20
+    <br>
+    病毒无情人有情，武汉加油，中国加油，世界加油！
+    <br>
+    <br>
   </div>
 </body>
