--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     width:100%;
     height:auto;
     text-align:right;
-    background:#ccc;
+    background:url(dirt.png);
     z-index:2;
     overflow:hidden;
     }
@@ -31,7 +31,7 @@
   <div id="tips">
     建站者：友谊の力量 一切本站内容归属凌空工作室管理
     <br>
-    工作室总部创立日期：2018.12.**，正式成立于2019.03.20
+    工作室总部创立日期：2018.12.09，正式成立于2019.03.20
     <br>
     病毒无情人有情，武汉加油，中国加油，世界加油！
     <br>
