--- a/index.html
+++ b/index.html
@@ -8,9 +8,19 @@
     position:absolute;
     bottom:0px;
     width:100%;
-    height:auto;
+    height:128px;
     text-align:right;
     background:url(dirt.png);
+    z-index:2;
+    overflow:hidden;
+    }
+    #pic {
+    position:absolute;
+    bottom:128px;
+    width:100%;
+    height:16px;
+    text-align:right;
+    background:url(grass_block_side.png);
     z-index:2;
     overflow:hidden;
     }
@@ -27,6 +37,8 @@
     <a href="news.html"><font size="7" color="333333">新闻</font></a>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <a href="prev.html"><font size="7" color="333333">预告</font></a>
+  </div>
+  <div id="pic">
   </div>
   <div id="tips">
     建站者：友谊の力量 一切本站内容归属凌空工作室管理
