--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     position:absolute;
     bottom:0px;
     width:100%;
-    height:128px;
+    height:96px;
     text-align:right;
     background:url(dirt.png);
     z-index:2;
@@ -16,7 +16,7 @@
     }
     #pic {
     position:absolute;
-    bottom:128px;
+    bottom:96px;
     width:100%;
     height:16px;
     text-align:right;
@@ -43,7 +43,7 @@
   <div id="tips">
     建站者：友谊の力量 一切本站内容归属凌空工作室管理
     <br>
-    工作室总部创立日期：2018.12.09，正式成立于2019.03.20
+    工作室总部创立日期：2018.12.09，正式成立于2019.03.20，网站建立于2020.03.24
     <br>
     病毒无情人有情，武汉加油，中国加油，世界加油！
     <br>
