--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
   </style>
 </head>
 <body>
+  <script>
+  if(navigator.userAgent.match(/(iPhone|Android)/i)){
+      alert("使用电脑浏览效果更佳，但您仍可继续浏览");
+  }
+  </script>
   <strong>Welcome to 欢迎来到<font size="20" color ="55EEFF">凌空工作室</font></strong>
   <div style="background-color:DDFFFF"><font size="15">索引</font></div>
   <div style="background-color:DDDDFF">
