--- a/info.html
+++ b/info.html
@@ -2,5 +2,5 @@
   <title>凌空工作室 信息</title>
 </head>
 <body>
-  <strong>凌空工作室于2018年12月9日初步创建，于2019年3月20日正式成立,此网站建立于2020年3月24日。<br>目前有10名成员。<br>作品语言有python，C++，Scratch，Java。<br>于工作室工作没有薪水，全凭兴趣.<br>此网站向外展示我们的编程作品，希望大家喜欢。</strong>
+  <strong><font size="12"概述</font></strong>凌空工作室于2018年12月9日初步创建，于2019年3月20日正式成立,此网站建立于2020年3月24日。<br>目前有10名成员。<br>作品语言有python，C++，Scratch，Java。<br>于工作室工作没有薪水，全凭兴趣.<br>此网站向外展示我们的编程作品，希望大家喜欢。
 </body>
