--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <a href="prev.html"><font size="7" color="333333">预告</font></a>
   </div>
+  <p align="middle"><strong><font face="楷体" size="20" color="FF3333">凌空工作室主页</font></strong></p>，
   <div id="pic">
   </div>
   <div id="tips">
