--- a/index.html
+++ b/index.html
@@ -50,7 +50,14 @@
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <a href="prev.html"><font size="7" color="333333">预告</font></a>
   </div>
-  <p align="middle"><strong><font face="楷体" size="20" color="FF3333">凌空工作室主页</font></strong></p>，
+  <p align="middle"><strong><font face="楷体" size="20" color="FF3333">凌空工作室主页</font></strong></p>
+  <div id="display">
+    <a href="post/1.html">
+      <strong>恭喜小破工作室喜提破站一枚！</strong>
+      <br>
+      3月24日，我们拥有了网站一个！
+    </a>
+  </div>
   <div id="pic">
   </div>
   <div id="tips">
