--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <head>
   <title>天空即为极限，我们超越天空！——凌空工作室</title>
   <style type="text/css">
-    display{
+    #display{
       border-radius: 40px;
       border-style: soild;
+      background: #CCFFCC;
       padding: 7px;
       width:400px;
       height:400px;
