--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     #display{
       border-radius: 40px;
       border-style: soild;
+      border-color: #121212;
       background: #CCFFCC;
       padding: 7px;
       width:400px;
       height:400px;
+      color: 333;
     }
     a{
       text-decoration:none;
@@ -54,9 +56,9 @@
   <p align="middle"><strong><font face="楷体" size="20" color="FF3333">凌空工作室主页</font></strong></p>
   <div id="display">
     <a href="post/1.html">
-      <strong>恭喜小破工作室喜提破站一枚！</strong>
+      <strong>恭 喜 小 破 工 作 室 喜 提 破 站 一 枚 ！</strong>
       <br>
-      3月24日，我们拥有了网站一个！
+      &nbsp;&nbsp;3月24日，我们拥有了网站一个！完全免费！（Github的带胜利）
     </a>
   </div>
   <div id="pic">
