--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
   <title>天空即为极限，我们超越天空！——凌空工作室</title>
   <style type="text/css">
     #display{
-      border-radius: 40px;
+      border-radius: 12px;
       border-style: soild;
       border-color: #121212;
       background: #CCFFCC;
       padding: 7px;
       width:400px;
       height:400px;
-      color: 333;
     }
     a{
       text-decoration:none;
@@ -55,11 +54,11 @@
   </div>
   <p align="middle"><strong><font face="楷体" size="20" color="FF3333">凌空工作室主页</font></strong></p>
   <div id="display">
-    <a href="post/1.html">
+    <font color="010101"><a href="post/1.html">
       <strong>恭 喜 小 破 工 作 室 喜 提 破 站 一 枚 ！</strong>
       <br>
-      &nbsp;&nbsp;3月24日，我们拥有了网站一个！完全免费！（Github的带胜利）
-    </a>
+      &nbsp;&nbsp;3月24日，我们拥有了网站一个！完全免费！（Github的带胜利）OwO
+      </a></font>
   </div>
   <div id="pic">
   </div>
