--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
   </div>
   <p align="middle"><strong><font face="楷体" size="20" color="FF3333">凌空工作室主页</font></strong></p>
   <div id="display">
-    <font color="010101"><a href="post/1.html">
+    <a href="post/1.html"><font color="010101">
       <strong>恭 喜 小 破 工 作 室 喜 提 破 站 一 枚 ！</strong>
       <br>
       &nbsp;&nbsp;3月24日，我们拥有了网站一个！完全免费！（Github的带胜利）OwO
-      </a></font>
+    </font></a>
   </div>
   <div id="pic">
   </div>
