--- a/index.html
+++ b/index.html
@@ -1,11 +1,35 @@
 <head>
   <title>天空即为极限，我们超越天空！——凌空工作室</title>
   <style type="text/css">
-    #display{
+    #display1{
+      position:absolute;
+      left: 10px;
       border-radius: 12px;
       border-style: soild;
       border-color: #121212;
       background: #CCFFCC;
+      padding: 7px;
+      width:400px;
+      height:400px;
+    }
+    #display2{
+      position:absolute;
+      left: 460px;
+      border-radius: 12px;
+      border-style: soild;
+      border-color: #121212;
+      background: #CCFFDD;
+      padding: 7px;
+      width:400px;
+      height:400px;
+    }
+    #display3{
+      position:absolute;
+      left: 910px;
+      border-radius: 12px;
+      border-style: soild;
+      border-color: #121212;
+      background: #CCFFEE;
       padding: 7px;
       width:400px;
       height:400px;
@@ -53,12 +77,18 @@
     <a href="prev.html"><font size="7" color="333333">预告</font></a>
   </div>
   <p align="middle"><strong><font face="楷体" size="20" color="FF3333">凌空工作室主页</font></strong></p>
-  <div id="display">
-    <a href="post/1.html"><font color="010101">
+  <a href="post/1.html"><div id="display1">
+    <font color="010101">
       <strong>恭 喜 小 破 工 作 室 喜 提 破 站 一 枚 ！</strong>
       <br>
       &nbsp;&nbsp;3月24日，我们拥有了网站一个！完全免费！（Github的带胜利）OwO
-    </font></a>
+    </font>
+  </div></a>
+  <div id="display2">
+  </div>
+  <div id="display3">
+  </div>
+  <div id="display1">
   </div>
   <div id="pic">
   </div>
