--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
   <title>天空即为极限，我们超越天空！——凌空工作室</title>
   <style type="text/css">
     #display1{
-      position:absolute;
+      float: left;
       left: 10px;
       border-radius: 12px;
-      border-style: soild;
       border-color: #121212;
       background: #CCFFCC;
       padding: 7px;
@@ -13,10 +12,8 @@
       height:400px;
     }
     #display2{
-      position:absolute;
       left: 460px;
       border-radius: 12px;
-      border-style: soild;
       border-color: #121212;
       background: #CCFFDD;
       padding: 7px;
@@ -24,10 +21,8 @@
       height:400px;
     }
     #display3{
-      position:absolute;
       left: 910px;
       border-radius: 12px;
-      border-style: soild;
       border-color: #121212;
       background: #CCFFEE;
       padding: 7px;
