--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <head>
   <title>天空即为极限，我们超越天空！——凌空工作室</title>
   <style type="text/css">
+    #displaybig{
+      height:400px;
+      width:1400px;
+    }
     #display1{
-      float: left;
+      position:absolute;
       left: 10px;
       border-radius: 12px;
       border-color: #121212;
@@ -12,6 +16,7 @@
       height:400px;
     }
     #display2{
+      position:absolute;
       left: 460px;
       border-radius: 12px;
       border-color: #121212;
@@ -21,6 +26,7 @@
       height:400px;
     }
     #display3{
+      position:absolute;
       left: 910px;
       border-radius: 12px;
       border-color: #121212;
@@ -72,6 +78,7 @@
     <a href="prev.html"><font size="7" color="333333">预告</font></a>
   </div>
   <p align="middle"><strong><font face="楷体" size="20" color="FF3333">凌空工作室主页</font></strong></p>
+  <div id="displaybig">
   <a href="post/1.html"><div id="display1">
     <font color="010101">
       <strong>恭 喜 小 破 工 作 室 喜 提 破 站 一 枚 ！</strong>
@@ -82,6 +89,7 @@
   <div id="display2">
   </div>
   <div id="display3">
+  </div>
   </div>
   <div id="display1">
   </div>
