--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       background: #CCFFCC;
       padding: 7px;
       width:400px;
-      height:400px;
+      height:480px;
     }
     #display2{
       position:absolute;
@@ -39,7 +39,7 @@
       text-decoration:none;
     }
     #tips {
-    position:absolute;
+    position:fixed;
     bottom:0px;
     width:100%;
     height:96px;
@@ -49,7 +49,7 @@
     overflow:hidden;
     }
     #pic {
-    position:absolute;
+    position:fixed;
     bottom:96px;
     width:100%;
     height:16px;
