--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <title>天空即为极限，我们超越天空！——凌空工作室</title>
   <style type="text/css">
     #displaybig{
-      height:400px;
+      height:480px;
       width:1400px;
     }
     #display1{
@@ -13,7 +13,7 @@
       background: #CCFFCC;
       padding: 7px;
       width:400px;
-      height:480px;
+      height:400px;
     }
     #display2{
       position:absolute;
@@ -86,13 +86,28 @@
       &nbsp;&nbsp;3月24日，我们拥有了网站一个！完全免费！（Github的带胜利）OwO
     </font>
   </div></a>
-  <div id="display2">
+  <a href="post/2.html"><div id="display2">
+    <font color="010101">
+      <strong></strong>
+      <br>
+      &nbsp;&nbsp;
+    </font>
+  </div></a>
+  <a href="post/3.html"><div id="display3">
+    <font color="010101">
+      <strong></strong>
+      <br>
+      &nbsp;&nbsp;
+    </font>
+  </div></a>
   </div>
-  <div id="display3">
-  </div>
-  </div>
-  <div id="display1">
-  </div>
+  <a href="post/4.html"><div id="display1">
+    <font color="010101">
+      <strong></strong>
+      <br>
+      &nbsp;&nbsp;
+    </font>
+  </div></a>
   <div id="pic">
   </div>
   <div id="tips">
