--- a/opus.html
+++ b/opus.html
@@ -1,11 +1,12 @@
 <head>
+<style type="text/css">
 a{
 text-decoration:none;
 }
+</style>
 </head>
 <body>
   <font size="15">作品集</font>
   <br>
   <a href="scratch"><font color="000000" size="5">Scratch</font></a>&nbsp;&nbsp;&nbsp;
-  
-</body
+</body>
