--- a/index.html
+++ b/index.html
@@ -86,11 +86,12 @@
       &nbsp;&nbsp;3月24日，我们拥有了网站一个！完全免费！（Github的带胜利）OwO
     </font>
   </div></a>
-  <a href="post/2.html"><div id="display2">
+  <a href="www.bilibili.com/video/BV177411m7o3"><div id="display2">
     <font color="010101">
-      <strong></strong>
+      <strong>内嵌视频测试</strong>
       <br>
-      &nbsp;&nbsp;
+      &nbsp;&nbsp;大家看看二维码隐藏着什么XD
+      <iframe src="//player.bilibili.com/player.html?aid=98581246&cid=39139016&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
     </font>
   </div></a>
   <a href="post/3.html"><div id="display3">
