--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <strong>内嵌视频测试</strong>
       <br>
       &nbsp;&nbsp;大家看看二维码隐藏着什么XD
-      <iframe src="//player.bilibili.com/player.html?aid=98581246&cid=39139016&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+      <iframe height="250" width="350" src="//player.bilibili.com/player.html?aid=98581246&cid=39139016&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
     </font>
   </div></a>
   <a href="post/3.html"><div id="display3">
