--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       &nbsp;&nbsp;3月24日，我们拥有了网站一个！完全免费！（Github的带胜利）OwO
     </font>
   </div></a>
-  <a href="www.bilibili.com/video/BV177411m7o3"><div id="display2">
+  <a href="https://www.bilibili.com/video/BV177411m7o3"><div id="display2">
     <font color="010101">
       <strong>内嵌视频测试</strong>
       <br>
