--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <head>
   <title>天空即为极限，我们超越天空！——凌空工作室</title>
   <style type="text/css">
+    #title{
+      position:fixed;
+    }
     #displaybig{
       height:480px;
       width:1400px;
@@ -66,7 +69,7 @@
       alert("使用电脑浏览效果更佳，但您仍可继续浏览");
   }
   </script>
-  <strong>Welcome to 欢迎来到<font size="20" color ="55EEFF">凌空工作室</font></strong>
+  <div id="title"><strong>Welcome to 欢迎来到<font size="20" color ="55EEFF">凌空工作室</font></strong></div>
   <div style="background-color:DDFFFF"><font size="15" face="宋体">索引</font></div>
   <div style="background-color:DDDDFF">
     <a href="info.html"><font size="7" color="333333">信息</font></a>
