--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <style type="text/css">
     #title{
       position:fixed;
+      background: #FFFFFF;
+      top:0px;
     }
     #displaybig{
       height:480px;
@@ -69,7 +71,7 @@
       alert("使用电脑浏览效果更佳，但您仍可继续浏览");
   }
   </script>
-  <div id="title"><strong>Welcome to 欢迎来到<font size="20" color ="55EEFF">凌空工作室</font></strong></div>
+  <div id="displaybig"></div>
   <div style="background-color:DDFFFF"><font size="15" face="宋体">索引</font></div>
   <div style="background-color:DDDDFF">
     <a href="info.html"><font size="7" color="333333">信息</font></a>
@@ -112,6 +114,7 @@
       &nbsp;&nbsp;
     </font>
   </div></a>
+  <div id="title"><strong>Welcome to 欢迎来到<font size="20" color ="55EEFF">凌空工作室</font></strong></div>
   <div id="pic">
   </div>
   <div id="tips">
