--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       position:fixed;
       background: #FFFFFF;
       top:0px;
+      width:100%;
     }
     #displaybig{
       height:480px;
@@ -71,7 +72,7 @@
       alert("使用电脑浏览效果更佳，但您仍可继续浏览");
   }
   </script>
-  <div id="displaybig"></div>
+  <div style="height=90px"></div>
   <div style="background-color:DDFFFF"><font size="15" face="宋体">索引</font></div>
   <div style="background-color:DDDDFF">
     <a href="info.html"><font size="7" color="333333">信息</font></a>
