--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       alert("使用电脑浏览效果更佳，但您仍可继续浏览");
   }
   </script>
-  <div style="height=90px"></div>
+  <div style="height=240px"></div>
   <div style="background-color:DDFFFF"><font size="15" face="宋体">索引</font></div>
   <div style="background-color:DDDDFF">
     <a href="info.html"><font size="7" color="333333">信息</font></a>
@@ -102,19 +102,13 @@
   </div></a>
   <a href="post/3.html"><div id="display3">
     <font color="010101">
-      <strong></strong>
+      <strong>卑微地打个小广告</strong>
       <br>
-      &nbsp;&nbsp;
+      &nbsp;&nbsp;友谊的背包冷知识准备开工辣~
+      <img src="/post/3-pic1.PNG" width="380" height="240"></img>
     </font>
   </div></a>
   </div>
-  <a href="post/4.html"><div id="display1">
-    <font color="010101">
-      <strong></strong>
-      <br>
-      &nbsp;&nbsp;
-    </font>
-  </div></a>
   <div id="title"><strong>Welcome to 欢迎来到<font size="20" color ="55EEFF">凌空工作室</font></strong></div>
   <div id="pic">
   </div>
