--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <strong>卑微地打个小广告</strong>
       <br>
       &nbsp;&nbsp;友谊的背包冷知识准备开工辣~
-      <img src="/post/3-pic1.PNG" width="380" height="240"></img>
+      <img src="post/3-pic1.png" width="380" height="240"></img>
     </font>
   </div></a>
   </div>
