--- a/opus.html
+++ b/opus.html
@@ -8,5 +8,8 @@ text-decoration:none;
 <body>
   <font size="15">作品集</font>
   <br>
-  <a href="scratch"><font color="000000" size="5">Scratch</font></a>&nbsp;&nbsp;&nbsp;
+  <a href="scratch.html"><font color="000000" size="5">Scratch</font></a>&nbsp;&nbsp;&nbsp;
+  <a href="cpp.html"><font color="000000" size="5">C++</font></a>&nbsp;&nbsp;&nbsp;
+  <a href="java.html"><font color="000000" size="5">Java</font></a>&nbsp;&nbsp;&nbsp;
+  <a href="py.html"><font color="000000" size="5">Python</font></a>&nbsp;&nbsp;&nbsp;
 </body>
