--- a/opus/java/tenmillon-fans-1-main.html
+++ b/opus/java/tenmillon-fans-1-main.html
@@ -1,4 +1,4 @@
-代码预览：
+代码预览：<br>
 <code>
 <font color="#7f0055"><b>import&nbsp;</b></font><font color="#000000">java.awt.Color;</font><br />
 <font color="#7f0055"><b>import&nbsp;</b></font><font color="#000000">java.awt.Font;</font><br />
@@ -112,4 +112,4 @@
 
 
 
-</body></html>
+</body><br><a href="index.html">返回</a></html>
