--- a/opus/java/index.html
+++ b/opus/java/index.html
@@ -18,8 +18,8 @@
 <td>老番茄千万粉预计</td>
 <td>20-03-30</td>
 <td>友谊の力量</td>
-<td><a href="tenmillon-fans#1#Main.html">预览</a></td>
-<td><a href="tenmillon-fans#1#Main.java" download="tenmillon-fans#1#Main.java">下载</a></td>
+<td><a href="tenmillon-fans-1-main.html">预览</a></td>
+<td><a href="tenmillon-fans#1#Main.java" download="Main.java">下载</a></td>
 </tr>
 </table>
 </body>
