--- a/opus/java/index.html
+++ b/opus/java/index.html
@@ -19,7 +19,7 @@
 <td>20-03-30</td>
 <td>友谊の力量</td>
 <td><a href="tenmillon-fans-1-main.html">预览</a></td>
-<td><a href="tenmillon-fans#1#Main.java" download="Main.java">下载</a></td>
+<td><a href="tenmillon-fans-1-main.java" download="Main.java">下载</a></td>
 </tr>
 </table>
 </body>
