--- a/opus/java/index.html
+++ b/opus/java/index.html
@@ -5,14 +5,11 @@
 <br>
 <table border="1">
 <tr>
-<th>代码列表</th>
-</tr>
-<tr>
-<td>项目名称</td>
-<td>开源日期</td>
-<td>项目作者</td>
-<td>预览链接</td>
-<td>下载链接</td>
+<th>项目名称</th>
+<th>开源日期</th>
+<th>项目作者</th>
+<th>预览链接</th>
+<th>下载链接</th>
 </tr>
 <tr>
 <td>老番茄千万粉预计</td>
