--- a/opus.html
+++ b/opus.html
@@ -8,8 +8,8 @@ text-decoration:none;
 <body>
   <font size="15">作品集</font>
   <br>
-  <a href="scratch.html"><font color="000000" size="5">Scratch</font></a>&nbsp;&nbsp;&nbsp;
-  <a href="cpp.html"><font color="000000" size="5">C++</font></a>&nbsp;&nbsp;&nbsp;
-  <a href="java.html"><font color="000000" size="5">Java</font></a>&nbsp;&nbsp;&nbsp;
-  <a href="py.html"><font color="000000" size="5">Python</font></a>&nbsp;&nbsp;&nbsp;
+  <a href="opus/scratch/index.html"><font color="000000" size="5">Scratch</font></a>&nbsp;&nbsp;&nbsp;
+  <a href="opus/cpp/index.html"><font color="000000" size="5">C++</font></a>&nbsp;&nbsp;&nbsp;
+  <a href="opus/java/index.html"><font color="000000" size="5">Java</font></a>&nbsp;&nbsp;&nbsp;
+  <a href="opus/py/index.html"><font color="000000" size="5">Python</font></a>&nbsp;&nbsp;&nbsp;
 </body>
