Update and rename tenmillion-fans-1-main.html to tenmillion-fans-1-Main.html

--- a/opus/java/tenmillion-fans-1-Main.html
+++ b/opus/java/tenmillion-fans-1-Main.html
@@ -1,3 +1,9 @@
+<head>
+    <title>老番茄千万粉预计 - 主类 Main</title>
+    a{
+      text-decoration:none;
+    }
+</head>
 代码预览：<br>
 <code>
 <font color="#7f0055"><b>import&nbsp;</b></font><font color="#000000">java.awt.Color;</font><br />
@@ -69,7 +75,7 @@
 <font color="#ffffff">&nbsp;&nbsp;&nbsp;&nbsp;</font><font color="#000000">f.add</font><font color="#000000">(</font><font color="#000000">output4</font><font color="#000000">)</font><font color="#000000">;</font><br />
 <font color="#ffffff">&nbsp;&nbsp;&nbsp;&nbsp;</font><font color="#000000">Color&nbsp;end&nbsp;=&nbsp;</font><font color="#7f0055"><b>new&nbsp;</b></font><font color="#000000">Color</font><font color="#000000">(</font><font color="#990000">0</font><font color="#000000">,</font><font color="#990000">0</font><font color="#000000">,</font><font color="#990000">0</font><font color="#000000">)</font><font color="#000000">;</font><br />
 <font color="#ffffff">&nbsp;&nbsp;</font><font color="#7f0055"><b>int&nbsp;</b></font><font color="#000000">uuid&nbsp;=&nbsp;</font><font color="#990000">546195</font><font color="#000000">;</font><br />
-<font color="#ffffff">&nbsp;&nbsp;</font><font color="#000000">Fans&nbsp;fans&nbsp;=&nbsp;</font><font color="#7f0055"><b>new&nbsp;</b></font><font color="#000000">Fans</font><font color="#000000">(</font><font color="#000000">uuid</font><font color="#000000">)</font><font color="#000000">;</font><br />
+<font color="#ffffff">&nbsp;&nbsp;</font><font color="#000000"><a href="tenmillion-fans-1-Fans.html">Fans</a>&nbsp;fans&nbsp;=&nbsp;</font><font color="#7f0055"><b>new&nbsp;</b></font><font color="#000000"><a href="tenmillion-fans-1-Fans.html">Fans</a></font><font color="#000000">(</font><font color="#000000">uuid</font><font color="#000000">)</font><font color="#000000">;</font><br />
 <font color="#ffffff">&nbsp;&nbsp;</font><font color="#7f0055"><b>int&nbsp;</b></font><font color="#000000">fan&nbsp;=&nbsp;</font><font color="#990000">0</font><font color="#000000">;</font><br />
 <font color="#ffffff">&nbsp;&nbsp;</font><font color="#7f0055"><b>final&nbsp;</b></font><font color="#7f0055"><b>int&nbsp;</b></font><font color="#000000">fanstart&nbsp;=&nbsp;fans.getFans</font><font color="#000000">()</font><font color="#000000">;</font><br />
 <font color="#ffffff">&nbsp;&nbsp;</font><font color="#7f0055"><b>final&nbsp;</b></font><font color="#7f0055"><b>long&nbsp;</b></font><font color="#000000">start&nbsp;=&nbsp;System.currentTimeMillis</font><font color="#000000">()</font><font color="#000000">;</font><br />
