--- a/opus/java/index.html
+++ b/opus/java/index.html
@@ -1,3 +1,6 @@
+<head>
+  <title>Java程序开源</title>
+</head>
 <body>
 <font size="24">Java程序开源</font>
 <br>
@@ -15,7 +18,7 @@
 <td>老番茄千万粉预计</td>
 <td>20-03-30</td>
 <td>友谊の力量</td>
-<td><a href="tenmillion-fans-1-main.html">预览</a></td>
+<td><a href="tenmillion-fans-1-Main.html">预览</a></td>
 <td><a href="tenmillion-fans-1.zip" download="src.zip">下载</a></td>
 </tr>
 </table>
