--- a/opus/java/tenmillion-fans-1-Main.html
+++ b/opus/java/tenmillion-fans-1-Main.html
@@ -4,6 +4,7 @@
       text-decoration:none;
     }
 </head>
+<body>
 代码预览：<br>
 <code>
 <font color="#7f0055"><b>import&nbsp;</b></font><font color="#000000">java.awt.Color;</font><br />
@@ -118,4 +119,4 @@
 
 
 
-</body><br><a href="index.html">返回</a></html>
+</body><br><a href="index.html">返回</a>
