--- a/opus/java/tenmillion-fans-1-Main.html
+++ b/opus/java/tenmillion-fans-1-Main.html
@@ -1,8 +1,10 @@
 <head>
     <title>老番茄千万粉预计 - 主类 Main</title>
+    <style type="text/css">
     a{
       text-decoration:none;
     }
+    </style>
 </head>
 <body>
 代码预览：<br>
