--- a/opus/java/tenmillion-fans-1-Fans.html
+++ b/opus/java/tenmillion-fans-1-Fans.html
@@ -1,15 +1,12 @@
+<head>
+    <title>老番茄千万粉预计 - 构造器类 Fans</title>
+    <style type="text/css">
+    a{
+      text-decoration:none;
+    }
+    </style>
 <body>
-
-
-<!-- ======================================================== -->
-<!-- = Java Sourcecode to HTML automatically converted code = -->
-<!-- =   Java2Html Converter 5.0 [2006-02-26] by Markus Gebhard  markus@jave.de   = -->
-<!-- =     Further information: http://www.java2html.de     = -->
-<div align="left" class="java">
-<table border="0" cellpadding="3" cellspacing="0" bgcolor="#ffffff">
-   <tr>
-  <!-- start source code -->
-   <td nowrap="nowrap" valign="top" align="left">
+代码预览：<br>
     <code>
 <font color="#7f0055"><b>import&nbsp;</b></font><font color="#000000">java.io.BufferedInputStream;</font><br />
 <font color="#7f0055"><b>import&nbsp;</b></font><font color="#000000">java.io.BufferedOutputStream;</font><br />
@@ -69,4 +66,7 @@
 </div>
 <!-- =       END of automatically generated HTML code       = -->
 <!-- ======================================================== -->
-</body>
+
+
+
+</body><br><a href="tenmillion-fans-1-Main.html">返回上级主类</a><br><a href="index.html">返回</a>
