--- a/opus/java/tenmillion-fans-1-Fans.html
+++ b/opus/java/tenmillion-fans-1-Fans.html
@@ -4,9 +4,16 @@
     a{
       text-decoration:none;
     }
+    #download{
+      border-radius: 12px;
+      background: #CCFFEE;
+      padding: 5px;
+      width:100px;
+      height:20px;
+    }
     </style>
 <body>
-代码预览：<br>
+    代码预览：<a href="tenmillion-fans-1-Fans.java" download="Fans.java"><div id="download"><font color=White>下载</font></div></a><br>
     <code>
 <font color="#7f0055"><b>import&nbsp;</b></font><font color="#000000">java.io.BufferedInputStream;</font><br />
 <font color="#7f0055"><b>import&nbsp;</b></font><font color="#000000">java.io.BufferedOutputStream;</font><br />
