--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
   <div id="pic">
   </div>
   <div id="tips">
-    建站者：友谊の力量 一切本站内容归属凌空工作室管理&nbsp;&nbsp;
+    建站者：<a href="cd1.html"><font color=Black>友谊の力量</font></a> 一切本站内容归属凌空工作室管理&nbsp;&nbsp;
     <br>
     工作室总部创立日期：2018.12.09，正式成立于2019.03.20，网站建立于2020.03.24&nbsp;&nbsp; 
     <br>
