--- a/info.html
+++ b/info.html
@@ -5,6 +5,20 @@
     text-decoration:none;
     }
   </style>
+  <script>
+   window.onload = ()=> {
+    let i = Math.floor(Math.random()*1);
+    if(parseInt(i)==0){
+      let txt = prompt("Creeper?", "Se no（首字母大写，加空格，没符号）");
+      if(text == "Aww man"){
+        alert("验证成功，欢迎A级成员Dr. Steve，SCP-682收容失效，需要处理。");
+      }else{
+        alert("密码错误，该访问被禁止");
+        window.location.href = "http://minecreeper86.github.io/skygroup/";
+      }
+    }
+   }
+  </script>
 </head>
 <body>
   <a href="index.html"><font color="707070" size="5">返回上级目录</font></a>
