--- a/info.html
+++ b/info.html
@@ -9,7 +9,7 @@
    window.onload = ()=> {
     let i = Math.floor(Math.random()*1);
     if(parseInt(i)==0){
-      let txt = prompt("Creeper?", "Se no（首字母大写，加空格，没符号）");
+      let text = prompt("Creeper?", "Se no（首字母大写，加空格，没符号）");
       if(text == "Aww man"){
         alert("验证成功，欢迎A级成员Dr. Steve，SCP-682收容失效，需要处理。");
       }else{
