--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-  <title>天空即为极限，我们超越天空！——凌空工作室</title>
+  <title>虚空即为极限，我们掉进虚空！——虚空工作室</title>
   <style type="text/css">
     #title{
       position:fixed;
@@ -16,7 +16,7 @@
       left: 10px;
       border-radius: 12px;
       border-color: #121212;
-      background: #CCFFCC;
+      background: #CCBBCC;
       padding: 7px;
       width:400px;
       height:400px;
@@ -26,7 +26,7 @@
       left: 460px;
       border-radius: 12px;
       border-color: #121212;
-      background: #CCFFDD;
+      background: #CCBBDD;
       padding: 7px;
       width:400px;
       height:400px;
@@ -36,7 +36,7 @@
       left: 910px;
       border-radius: 12px;
       border-color: #121212;
-      background: #CCFFEE;
+      background: #CCBBEE;
       padding: 7px;
       width:400px;
       height:400px;
@@ -69,7 +69,7 @@
 <body>
   <script>
   if(navigator.userAgent.match(/(iPhone|Android)/i)){
-      alert("使用电脑浏览效果更佳，但您仍可继续浏览");
+      alert("一给我里giao");
   }
   </script>
   <div style="height=240px"></div>
@@ -83,7 +83,7 @@
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <a href="prev.html"><font size="7" color="333333">预告</font></a>
   </div>
-  <p align="middle"><strong><font face="楷体" size="20" color="0">凌空工作室主页</font></strong></p>
+  <p align="middle"><strong><font face="楷体" size="20" color="0">虚空工作室主页</font></strong></p>
   <div id="displaybig">
   <a href="post/1.html"><div id="display1">
     <font color="010101">
@@ -109,13 +109,13 @@
     </font>
   </div></a>
   </div>
-  <div id="title"><strong>Welcome to 欢迎来到<font size="20" color ="55EEFF">凌空工作室</font></strong></div>
+  <div id="title"><strong>Welcome to 欢迎来到<font size="20" color ="55EEFF">虚空工作室</font></strong></div>
   <div id="pic">
   </div>
   <div id="tips">
-    建站者：<a href="cd1.html"><font color=Black>友谊の力量</font></a> 一切本站内容归属凌空工作室管理&nbsp;&nbsp;
+    建站者：<a href="cd1.html"><font color=Black>友谊の力量</font></a> 一切本站内容归属虚空工作室管理&nbsp;&nbsp;
     <br>
-    工作室总部创立日期：2018.12.09，正式成立于2019.03.20，网站建立于2020.03.24&nbsp;&nbsp; 
+    工作室总部创立日期：2020.12.09，正式成立于2019.03.20，网站建立于2020.03.24&nbsp;&nbsp; 
     <br>
     病毒无情人有情，武汉加油，中国加油，世界加油！&nbsp;&nbsp;
     <br>
