--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-  <title>虚空即为极限，我们掉进虚空！——虚空工作室</title>
+  <title>基岩即为极限，我们掉进虚空！——虚空工作室</title>
   <style type="text/css">
     #title{
       position:fixed;
