--- a/april_fool_index.html
+++ b/april_fool_index.html
@@ -50,7 +50,7 @@
     width:100%;
     height:96px;
     text-align:right;
-    background:url(dirt.png);
+    background:url(end_stone.png);
     z-index:2;
     overflow:hidden;
     }
@@ -60,7 +60,7 @@
     width:100%;
     height:16px;
     text-align:right;
-    background:url(grass_block_side.png);
+    background:url(end_stone_bricks.png);
     z-index:2;
     overflow:hidden;
     }
